[gd_scene load_steps=6 format=3 uid="uid://cppc4qs4rb3b6"]

[ext_resource type="Script" uid="uid://1am7jlr50df5" path="res://Scripts/PassWordGame.gd" id="1_ge7e5"]
[ext_resource type="AudioStream" uid="uid://bv5227ls5ejej" path="res://Audio/Soundtrack/PassWordGame.ogg" id="2_4tdsa"]
[ext_resource type="Texture2D" uid="uid://c5trtmb05sfr4" path="res://Sprites/PassWordGame.png" id="2_7ptjk"]
[ext_resource type="FontFile" uid="uid://b4bp7sni8u0il" path="res://Sprites/font2.png" id="3_fdywt"]

[sub_resource type="LabelSettings" id="LabelSettings_vafdc"]
line_spacing = 16.0
font = ExtResource("3_fdywt")

[node name="PassWordGame" type="Node2D"]
script = ExtResource("1_ge7e5")
music = ExtResource("2_4tdsa")

[node name="PasswordInput" type="Node2D" parent="."]
position = Vector2(48, 48)

[node name="Box" type="NinePatchRect" parent="PasswordInput"]
offset_left = -16.0
offset_top = -16.0
offset_right = 176.0
offset_bottom = 96.0
texture = ExtResource("2_7ptjk")
draw_center = false
patch_margin_left = 8
patch_margin_top = 8
patch_margin_right = 8
patch_margin_bottom = 8

[node name="InputLetters" type="Label" parent="PasswordInput"]
offset_right = 40.0
offset_bottom = 23.0
text = "0123456789
abcdefghjk
lmnpqrstuw
xy "
label_settings = SubResource("LabelSettings_vafdc")
uppercase = true

[node name="InputLeft" type="Label" parent="PasswordInput"]
offset_left = 48.0
offset_top = 72.0
offset_right = 80.0
offset_bottom = 83.0
theme_override_fonts/font = ExtResource("3_fdywt")
text = "left"
uppercase = true

[node name="InputRight" type="Label" parent="PasswordInput"]
offset_left = 88.0
offset_top = 72.0
offset_right = 120.0
offset_bottom = 83.0
theme_override_fonts/font = ExtResource("3_fdywt")
text = "right"
uppercase = true

[node name="InputEnd" type="Label" parent="PasswordInput"]
offset_left = 136.0
offset_top = 72.0
offset_right = 160.0
offset_bottom = 83.0
theme_override_fonts/font = ExtResource("3_fdywt")
text = "end"
uppercase = true

[node name="Selector" type="Sprite2D" parent="PasswordInput"]
texture = ExtResource("2_7ptjk")
centered = false
offset = Vector2(0, 8)
region_enabled = true
region_rect = Rect2(8, 8, 8, 8)

[node name="PasswordBox" type="Node2D" parent="."]
position = Vector2(40, 168)

[node name="Box" type="NinePatchRect" parent="PasswordBox"]
offset_left = -16.0
offset_top = -16.0
offset_right = 192.0
offset_bottom = 48.0
texture = ExtResource("2_7ptjk")
draw_center = false
patch_margin_left = 8
patch_margin_top = 8
patch_margin_right = 8
patch_margin_bottom = 8

[node name="Password" type="Label" parent="PasswordBox"]
offset_right = 176.0
offset_bottom = 48.0
text = "0123456789abcdefghjklm
sd"
label_settings = SubResource("LabelSettings_vafdc")
uppercase = true

[node name="Selector" type="Sprite2D" parent="PasswordBox"]
texture = ExtResource("2_7ptjk")
centered = false
offset = Vector2(0, 8)
region_enabled = true
region_rect = Rect2(8, 8, 8, 8)

[node name="PassWordError" type="Label" parent="."]
visible = false
offset_left = 72.0
offset_top = 144.0
offset_right = 192.0
offset_bottom = 155.0
theme_override_fonts/font = ExtResource("3_fdywt")
text = "pass word error"
uppercase = true

[node name="PWETimer" type="Timer" parent="."]
process_mode = 3
wait_time = 0.2
